Fixed Spot Detail Review Cards Spacing

--- a/frontend/src/components/CreateBooking/CreateBooking.css
+++ b/frontend/src/components/CreateBooking/CreateBooking.css
@@ -87,9 +87,9 @@ ul {
   flex-direction: column;
   justify-content: center;
   /* align-items: center; */
-  border-bottom: 1px solid #a1a1a1;
-  border-left: 1px solid #a1a1a1;
-  border-right: 1px solid #a1a1a1;
+  border-bottom: 1px solid #bbbbbb;
+  border-left: 1px solid #bbbbbb;
+  border-right: 1px solid #bbbbbb;
   border-radius: 0 0 8px 8px;
   height: 55px;
   padding-left: 12px;
@@ -111,11 +111,11 @@ ul {
   box-sizing: border-box;
   /* width: 12%; */
   padding: 12px;
-  /* border: 1px solid #a1a1a1; */
-  border-top: 1px solid #a1a1a1;
-  border-bottom: 1px solid #a1a1a1;
-  border-right: 1px solid #a1a1a1;
-  border-left: .5px solid #a1a1a1;
+  /* border: 1px solid #bbbbbb; */
+  border-top: 1px solid #bbbbbb;
+  border-bottom: 1px solid #bbbbbb;
+  border-right: 1px solid #bbbbbb;
+  border-left: .5px solid #bbbbbb;
   border-radius: 0 8px 0 0;
   background-color: transparent !important;
   font-family: 'Montserrat', sans-serif;
@@ -142,11 +142,11 @@ input.CreateBookingInputCheckout[type="date"]::-webkit-calendar-picker-indicator
   box-sizing: border-box;
   /* width: 12%; */
   padding: 12px;
-  /* border: 1px solid #a1a1a1; */
-  border-top: 1px solid #a1a1a1;
-  border-bottom: 1px solid #a1a1a1;
-  border-right: .5px solid #a1a1a1;
-  border-left: 1px solid #a1a1a1;
+  /* border: 1px solid #bbbbbb; */
+  border-top: 1px solid #bbbbbb;
+  border-bottom: 1px solid #bbbbbb;
+  border-right: .5px solid #bbbbbb;
+  border-left: 1px solid #bbbbbb;
   border-radius: 8px 0 0 0;
   background-color: transparent !important;
   font-family: 'Montserrat', sans-serif;
