--- a/frontend/src/components/ReviewCard/ReviewCard.css
+++ b/frontend/src/components/ReviewCard/ReviewCard.css
@@ -10,8 +10,8 @@
   margin-top: 10px;
   margin-right: 10px;
   margin-bottom: 10px; */
-  padding-left: 8px;
-  padding-right: 8px;
+  /* padding-left: 8px; */
+  /* padding-right: 8px; */
   margin-right: 94.656px;
 }
 
